
    <AbsoluteLayout 
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent" 
    	xmlns:android="http://schemas.android.com/apk/res/android"
    >
        <Button 
        	android:text="@string/calc8" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc8" 
        	android:layout_x="99dip" 
        	android:layout_y="203dip"></Button>
        <Button 
        	android:text="@string/calc9" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc9" 
        	android:layout_x="163dip" 
        	android:layout_y="203dip"></Button>
        <Button 
        	android:text="@string/calcClear" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calcClear" 
        	android:layout_x="227dip" 
        	android:layout_y="203dip"></Button>
        <Button 
        	android:text="@string/calc4" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc4" 
        	android:layout_x="35dip" 
        	android:layout_y="251dip"></Button>
        <Button 
        	android:text="@string/calc5" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc5" 
        	android:layout_x="99dip" 
        	android:layout_y="251dip"></Button>
        <Button 
        	android:text="@string/calc6" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc6" 
        	android:layout_x="163dip" 
        	android:layout_y="251dip"></Button>
        <Button 
        	android:text="@string/calcDiv" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calcDiv" 
        	android:layout_x="227dip" 
        	android:layout_y="251dip"></Button>
        <Button 
        	android:text="@string/calc1" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc1" 
        	android:layout_x="35dip" 
        	android:layout_y="299dip"></Button>
        <Button 
        	android:text="@string/calc2" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc2" 
        	android:layout_x="99dip" 
        	android:layout_y="299dip"></Button>
        <Button 
        	android:text="@string/calc3" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc3" 
        	android:layout_x="163dip" 
        	android:layout_y="299dip"></Button>
        <Button 
        	android:text="@string/calcMult" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calcMult" 
        	android:layout_x="227dip" 
        	android:layout_y="299dip"></Button>
        <Button 
        	android:text="@string/calcDec" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calcDec" 
        	android:layout_x="35dip" 
        	android:layout_y="347dip"></Button>
        <Button 
        	android:text="@string/calc0" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc0" 
        	android:layout_x="99dip" 
        	android:layout_y="347dip"></Button>
        <Button 
        	android:text="@string/calcPlus" 
        	android:layout_height="48dip"
        	android:layout_width="64dip" 
        	android:id="@+id/calcPlus" 
        	android:layout_x="163dip" 
        	android:layout_y="347dip"></Button>
        <Button 
        	android:text="@string/calcMin" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calcMin" 
        	android:layout_x="227dip" 
        	android:layout_y="347dip"></Button>
        <Button 
        	android:text="@string/calcEnter" 
        	android:layout_height="48dip" 
        	android:layout_width="256dip" 
        	android:id="@+id/calcEnter" 
        	android:layout_x="35dip" 
        	android:layout_y="395dip"></Button>
        <Button 
        	android:text="@string/calc7" 
        	android:layout_height="48dip" 
        	android:layout_width="64dip" 
        	android:id="@+id/calc7" 
        	android:layout_x="35dip" 
        	android:layout_y="203dip"></Button>
        <TextView 
        	android:id="@+id/input" 
        	android:text="@string/input" 
        	android:textColor="#FFFFFF" 
        	android:layout_height="wrap_content" 
        	android:gravity="right" 
        	android:layout_width="256dip" 
        	android:layout_x="35dip" 
        	android:layout_y="162dip"
        	android:height="35dip"
        	android:hint="0"></TextView>
    </AbsoluteLayout>
